@@ -1,4 +1,8 @@
-﻿drkns 06.04.2016 19:41:18 +0200 - build 4615
+﻿drkns 06.04.2016 22:42:14 +0200 - build 4616
+
+1. Fix of fix of 4564.
+
+drkns 06.04.2016 19:41:18 +0200 - build 4615
 
 1. С форума: ANSI плагины потеряли курсор файловой панели (4602).
 
